--- a/src/templates/country.hbs
+++ b/src/templates/country.hbs
@@ -1,8 +1,8 @@
 <div class="card">
-  <h1>{{name}}</h1>
+  <h2 class="country-name">{{name}}</h2>
   <div class="card-body">
-    <h2 class="card-title">Capital: {{capital}}</h2>
-    <p class="card-text">Population: {{population}}</p>
+    <p class="card-title"><b>Capital:</b> {{capital}}</p>
+    <p class="card-text"><b>Population:</b> {{population}}</p>
 
     <p class="card-text"><b>Languages:</b></p>
     <ul class="list-group"></ul>
